# indi-camrecorder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.cmake/api/v1/reply/: cache-v2-9cd67bb3325ad84fcf3a.json  cmakeFiles-v1-4e767bacc0ff25131010.json  index-2025-10-19T09-38-15-0184.json  target-INDICamRecorder_autogen-Debug-7e0b7e71503b5b85a2ae.json  target-INDICamRecorder_autogen_timestamp_deps-Debug-698a6b9d18c0edbf239b.json
.cmake/api/v1/reply.prev/: codemodel-v2-bb78121031b28caa7caa.json  directory-.-Debug-5ad51d9af5155cef8ad0.json  target-INDICamRecorder-Debug-2ab7bbf411ae1950b432.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/.cache/clangd/index/: QApplication.7FAC4674961FAC93.idx  QMainWindow.689B22624BF56362.idx  __stdarg___gnuc_va_list.h.83B0170E3C0F54E1.idx  __stdarg___va_copy.h.15713D8156A0C344.idx  __stdarg_header_macro.h.FC66E7E65EAA6FF9.idx  __stdarg_va_arg.h.7976B14B2E711FE8.idx  __stdarg_va_copy.h.2FD875C61FA19649.idx  __stddef_null.h.849486D82F87286B.idx  __stddef_offsetof.h.04D7202B3B7A7408.idx  __stddef_rsize_t.h.A6B0DDF4CCFE0E3E.idx  __stddef_wchar_t.h.6BF32C4DA23779D3.idx  (+126 more)
buld/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
buld/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
buld/INDICamRecorder.app/Contents/: Info.plist
buld/INDICamRecorder_autogen/: deps
buld/INDICamRecorder_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
docker/: Dockerfile  docker-compose.yml
libs/imgui-cmake/: CMakeLists.txt
(+79 files in other folders)
